--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,7 @@ body{
 
 #splash-button{
     font-size: .75em !important;
-    font-weight: 800 !important;
+    font-weight: 900 !important;
 
     margin: 10px !important;
     box-shadow: 0px 1px 6px -1px #747fe0 !important;
